# tabular-orchestrated

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  code-checks.yml  codecov.yml  publish.yml  test-imports.yml
client/: pyproject.toml
client/tabular_orchestrated_kfp/: components.py
tabular_kfp/: components.py  gcp_comp.py  main.py  parse_components.py  pipeline.py  pipeline_gcp.py
tabular_orchestrated/: components.py  deepchecks.py  mljar.py  tab_comp.py
tabular_orchestrated/dc/: __init__.py  dc_data.py  dc_main.py  dc_model.py  dc_model_v2.py
tabular_orchestrated/evalml/: __init__.py  analysis.py  evalml.py  pipeline.py  pipeline_predict.py  search.py  select_pipeline.py
tabular_orchestrated/evalml/analysis/: analysis_comp.py  analysis_comp_v2.py  utils.py
tabular_orchestrated/mljar/: mljar.py  mljar_deepchecks.py
tabular_orchestrated_kfp/: __init__.py  gcp.py
tests/: conftest.py  test_compile.py  test_mljar.py  test_parser.py
tests/comp/: conftest.py
tests/comp/dc/: conftest.py  test_comp_run.py  test_dc_data.py
tests/comp/evalml/: conftest.py  test_evalml.py  test_evalml_dc.py
tests/comp/mljar/: conftest.py  test_mljar.py  test_mljar_data_conv.py
tests/dataset_examples/: natality.parquet
tests/imports_checks/: test_deepchecks_imports.py  test_editor_imports.py  test_evalml_imports.py  test_mljar_imports.py  test_spliter_imports.py
