[project]
authors = [
    {name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = "<=3.12,>=3.9"
name = "tabular-orchestrated"
dynamic = ["version"]
description = ""
readme = "README.md"
keywords = [
    "python",
]
dependencies = [
    "setuptools>=75.6.0",
]
[project.optional-dependencies]
editor = [
    "kfp>=2","ml-orchestrator", "pandas-pyarrow",
        "ml-orchestrator[editor]>=0.0.5b0",

]

#evalml = [
#    "evalml>=0.83.0","ml-orchestrator", "pandas-pyarrow"
#]

spliter = [
    "scikit-learn>=1.3.0","ml-orchestrator", "pandas-pyarrow"
]

mljar = [
    "mljar-supervised==1.1.14","ml-orchestrator", "pandas-pyarrow"
]

deepchecks = [
    "eh-tabular-deepchecks>=0.0.4b","ml-orchestrator", "pandas-pyarrow"
]

[dependency-groups]
dev = [
    "debugpy==1.8.10",
    "matplotlib<3.9.4",
    "ml-orchestrator[editor]",
    "google-cloud-aiplatform",
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pre-commit>=2.20.0",
    "pre-commit-uv>=4",
    "pytest-cov>=4.0.0",
    "mypy==1.13.0",
    "pytest-parametrization<2023,>=2022",
    "ruff<1.0.0,>=0.8.2",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", "tabular_orchestrated/**", "tabular_kfp/**", "tabular_orchestrated_kfp/**"]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N"]

fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tabular_kfp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tabular_orchestrated_kfp.*"
ignore_errors = true
