[project]
name = "tabular-orchestrated"
authors = [
    { name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">3.10"
dynamic = ["version"]
description = ""
readme = "README.md"
keywords = [
    "python",
]
dependencies = [
    "pandas-pyarrow>=0.1.11",
]

[tool.hatch.build.targets.sdist]
only-include = ["tabular_orchestrated_kfp", "tabular_orchestrated"]
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["tabular_orchestrated_kfp", "tabular_orchestrated"]
source = "."

[tool.uv.sources]
tabular-orchestrated = { path = "."}

[project.optional-dependencies]
editor = [

    "ml-orchestrator[editor]>=0.0.14b0",
]
base = [
    "ml-orchestrator", "numpy<2.0.0",
]


evalml = [
    "eh-evalml","ml-orchestrator", "numpy<2.0.0",
]

spliter = [
    "scikit-learn>=1.3.0", "ml-orchestrator", "numpy<2.0.0",
]

mljar = [
    "mljar-supervised", "ml-orchestrator", "numpy<2.0.0",
]

deepchecks = [
    "eh-tabular-deepchecks>=0.0.4b", "ml-orchestrator", "numpy<2.0.0", "setuptools",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.10",
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pre-commit>=2.20.0",
    "pre-commit-uv>=4",
    "pytest-cov>=4.0.0",
    "mypy>=1.13.0",
    "pytest-parametrization",
    "ruff",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", "tabular_orchestrated/**", "tabular_kfp/**", "tabular_orchestrated_kfp/**"]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N"]

fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tabular_kfp.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tabular_orchestrated_kfp.*"
ignore_errors = true
[tool.pytest.ini_options]
addopts = "--ignore=tests/comp/mljar --ignore=comp/mljar --ignore=tests/imports_checks --ignore=imports_checks"
